--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ header { position: relative; }
     <label for="sepPreset">Separador entre documentos</label>
     <div class="row">
       <select id="sepPreset" style="flex:1; min-width:220px">
-        <option value="blank2" selected>2 linhas em branco (padrão)</option>
+        <option value="blank2" selected>## FIM DO DOCUMENTO ##</option>
         <option value="dash">Linha horizontal (---)</option>
-        <option value="hash">## FIM DO DOCUMENTO ##</option>
+        <option value="hash">2 linhas em branco (padrão)</option>
         <option value="none">Nenhum separador</option>
       </select>
       <input id="sepCustom" type="text" placeholder="Personalizado (se preencher, substitui o selecionado)" style="flex:2; min-width:260px" />
